FIX: Refresh Tokens en endpoints hebben restrictions